--- a/hackcoin_landing.html
+++ b/hackcoin_landing.html
@@ -575,7 +575,7 @@
                 HackCoin is not just another cryptocurrency. It's a digital rebellion — a symbol of unity among free minds across the internet. Born from the hacker ethos: freedom of information, no censorship, full access, and collective evolution.
             </p>
             <div class="cta-buttons">
-                <a href="https://github.com/solo7777/HackCoin/tree/main" class="btn btn-primary">View on GitHub</a>
+                <a href="https://github.com/solo7777/HackCoin" class="btn btn-primary">View on GitHub</a>
                 <a href="#about" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
@@ -795,7 +795,7 @@
             <div class="contact-card fade-in">
                 <span class="card-icon">💻</span>
                 <h3>GitHub</h3>
-                <a href="https://github.com/solo7777/HackCoin/tree/main" target="_blank">View Code</a>
+                <a href="https://github.com/solo7777/HackCoin" target="_blank">View Code</a>
             </div>
         </div>
     </section>
