--- a/hackcoin_landing.html
+++ b/hackcoin_landing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HackCoin - Digital Rebellion</title>
+	<meta name="description" content="HackCoin is a decentralized cryptocurrency designed to empower a global community that values freedom of information"/>
     <link rel="icon" href="https://i.postimg.cc/CKtRvz3R/Google-AI-Studio-2025-07-11-T13-54-39-126-Z.png" type="image/png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Inter:wght@300;400;500;600;700&display=swap');
