Updated files to sync project history

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HackCoin - Digital Rebellion</title>
+    <title>HackCoin - Digital Rebellion 1</title>
 	<meta name="description" content="HackCoin is a decentralized cryptocurrency designed to empower a global community that values freedom of information"/>
     <link rel="icon" href="https://i.postimg.cc/CKtRvz3R/Google-AI-Studio-2025-07-11-T13-54-39-126-Z.png" type="image/png">
     <style>
